--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -25,3 +25,23 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
+
+@media screen  and (max-width:480px) {
+    .pl{
+        padding: 10px;
+    }
+
+    .pl-title{
+        margin-top: 50px;
+        font-size: 28px;
+    }
+
+    .pl-texts{
+        width: 100%;
+    }
+
+    .pl-desc{
+        display: none;
+    }
+}
